feat: Add comprehensive game data, implement routing for landing page and calculator, and integrate language context and chatbot functionality.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 # Environment Variables Template
 # Copy this file to .env.local and fill in your values
 
-# Gemini API Key (Required)
-# Get your API key from: https://ai.google.dev/
-GEMINI_API_KEY=your_api_key_here
+# OpenRouter API Key (for AI responses and embeddings)
+# Get your API key from: https://openrouter.ai/
+VITE_OPENROUTER_API_KEY=your_openrouter_key_here
+
+# Supabase Configuration (for vector search)
+# Get from: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_anon_key_here
+
+# For upload script only (backend) - DO NOT expose in frontend
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
